ams-activity-datatable/main/default/objects/amsadt_ActivityTableSetting__mdt/amsadt_ActivityTableSetting__mdt.object-meta.xml
<CustomObject>
    <description>Setting containing object, fields, filters and other related settings in creation activity table</description>
    <label>ADT Activity Table Setting</label>
    <pluralLabel>ADT Activity Table Settings</pluralLabel>
</CustomObject>