ams-activity-datatable/main/default/objects/amsadt_ActivityTableSetting__mdt/fields/amsadt_DefaultFilterAllorMy__c.field-meta.xml
<CustomField>
    <fullName>amsadt_DefaultFilterAllorMy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for showing the All or My Filter in Activity Table</description>
    <inlineHelpText>Check if you want to show All or My Filter</inlineHelpText>
    <label>Default Filter: All or My</label>
    <type>Checkbox</type>
</CustomField>