ams-activity-datatable/main/default/objects/amsadt_ActivityTableSetting__mdt/fields/amsadt_DefaultFilterDateRange__c.field-meta.xml
<CustomField>
    <fullName>amsadt_DefaultFilterDateRange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for showing the Date Range filter in Activity Table</description>
    <inlineHelpText>Check if you want to show Date Range</inlineHelpText>
    <label>Default Filter: Date Range</label>
    <type>Checkbox</type>
</CustomField>