ams-activity-datatable/main/default/objects/amsadt_ActivityTableSetting__mdt/fields/amsadt_DefaultFilterDateRangeField__c.field-meta.xml
<CustomField>
    <fullName>amsadt_DefaultFilterDateRangeField__c</fullName>
    <description>Used for setting the field from object for Date Range filter</description>
    <inlineHelpText>Indicate the field from object for Date Range filter</inlineHelpText>
    <label>Default Filter: Date Range Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>