ams-activity-datatable/main/default/objects/amsadt_ActivityTableSetting__mdt/fields/amsadt_DefaultFilterDateRangeLabel__c.field-meta.xml
<CustomField>
    <fullName>amsadt_DefaultFilterDateRangeLabel__c</fullName>
    <description>Used for setting up the label for Date Range filter in Activity Table</description>
    <inlineHelpText>Indicate the label for Date Range filter</inlineHelpText>
    <label>Default Filter: Date Range Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>