ams-activity-datatable/main/default/objects/amsadt_ActivityTableSetting__mdt/fields/amsadt_DefaultFilterSortBy__c.field-meta.xml
<CustomField>
    <fullName>amsadt_DefaultFilterSortBy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for showing the Sort By Filter in Activity Table</description>
    <inlineHelpText>Check if you want to show Sort By filter</inlineHelpText>
    <label>Default Filter: Sort By</label>
    <type>Checkbox</type>
</CustomField>