ams-activity-datatable/main/default/objects/amsadt_ActivityTableSetting__mdt/fields/amsadt_DefaultFilterSortByField__c.field-meta.xml
<CustomField>
    <fullName>amsadt_DefaultFilterSortByField__c</fullName>
    <description>Used for setting the field from object for Sort By filter</description>
    <inlineHelpText>Indicate the field from object for Sort By filter</inlineHelpText>
    <label>Default Filter: Sort By Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>