ams-activity-datatable/main/default/objects/amsadt_ActivityTableSetting__mdt/fields/amsadt_DefaultFilterSortByLabel__c.field-meta.xml
<CustomField>
    <fullName>amsadt_DefaultFilterSortByLabel__c</fullName>
    <description>Used for setting up the label for Sort By filter in Activity Table</description>
    <inlineHelpText>Indicate the label for Sort By filter</inlineHelpText>
    <label>Default Filter: Sort By Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>