ams-activity-datatable/main/default/objects/amsadt_ActivityTableSetting__mdt/fields/amsadt_ObjectName__c.field-meta.xml
<CustomField>
    <fullName>amsadt_ObjectName__c</fullName>
    <description>It is the object name used in Activity Table (Event or Task)</description>
    <inlineHelpText>Determine if object used in Activity Table is either Event or Task</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>