ams-activity-datatable/main/default/objects/amsadt_ActivityTableSetting__mdt/fields/amsadt_ParentObjectName__c.field-meta.xml
<CustomField>
    <fullName>amsadt_ParentObjectName__c</fullName>
    <description>The object name used where Activity is placed e.g. Account, Contact</description>
    <inlineHelpText>Determine if parent object in Activity Table is either Account, Contact etc</inlineHelpText>
    <label>Parent Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>