ams-activity-datatable/main/default/objects/amsadt_ActivityTableSetting__mdt/fields/amsadt_QueryFields__c.field-meta.xml
<CustomField>
    <fullName>amsadt_QueryFields__c</fullName>
    <description>The fields being used from the Activity object for query</description>
    <inlineHelpText>Determine the fields in Activity object used for query</inlineHelpText>
    <label>Query Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>