ams-activity-datatable/main/default/objects/amsadt_ActivityTableSetting__mdt/fields/amsadt_TableColumns__c.field-meta.xml
<CustomField>
    <fullName>amsadt_TableColumns__c</fullName>
    <description>This is the columns for Activity Table in JSON format e.g

{&quot;fieldName&quot;:&quot;Id&quot;, &quot;label&quot;: &quot;Subject&quot;, &quot;type&quot;: &quot;url&quot;,
&quot;typeAttributes&quot;: {
&quot;label&quot;: {
&quot;fieldName&quot;: &quot;Subject&quot;
}
}},
{&quot;fieldName&quot; : &quot;CreatedDate&quot;, &quot;label&quot; : &quot;Created Date&quot;, &quot;type&quot;: &quot;date-local&quot;, &quot;typeAttributes&quot;:{
&quot;month&quot;: &quot;2-digit&quot;,
&quot;day&quot;: &quot;2-digit&quot;
}},
{&quot;fieldName&quot; : &quot;CreatedBy.Name&quot;, &quot;label&quot; : &quot;Created By&quot;},</description>
    <inlineHelpText>indicate columns for Activity Table in JSON format</inlineHelpText>
    <label>Table Columns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>