ams-activity-datatable/main/default/objects/amsadt_ActivityTableSetting__mdt/fields/amsadt_TableIcon__c.field-meta.xml
<CustomField>
    <fullName>amsadt_TableIcon__c</fullName>
    <description>It is used for determining the icon for the Activity Table. Check here https://www.lightningdesignsystem.com/icons/</description>
    <inlineHelpText>Indicate the icon to be used for Activity Table</inlineHelpText>
    <label>Table Icon</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>