ams-activity-datatable/main/default/objects/amsadt_ActivityTableSetting__mdt/fields/amsadt_URLFields__c.field-meta.xml
<CustomField>
    <fullName>amsadt_URLFields__c</fullName>
    <description>This is to determine what fields or columns in Activity Table that have link in JSON format</description>
    <inlineHelpText>Indicate the columns or fields in Activity Table having links based on Table Columns field</inlineHelpText>
    <label>URL Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>